# ot-projekti

./: .coveragerc  .env  .env.test  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
documentation/: architecture.md  credits.md  og_specification.md  requirementspecification.md  specification.md  study_log.md  studylog.md  temp-credits.md  testing.md  user_manual.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
src/: bar.py  battle.py  battleactionhandler.py  battledemo.py  battlemenu.py  battlemenucreator.py  battlemenuhandler.py  battlespritehandler.py  buttons.py  character.py  clock.py  config.py  constants.py  containers.py  creditsmenu.py  cursor.py  demo.py  demo2.py  eventcheck.py  eventhandler.py  game.py  gamestate.py  helpmenu.py  index.py  item.py  keys.py  load_img.py  load_util.py  magic.py  maingame.py  menu.py  monster.py  party.py  partymember.py  player_action.py  prepare.py  renderer.py  skill.py  techniques.py  titlescreen.py  (+1 more)
src/combat/: battle.py  player_action.py
src/core/: demo.py  keys.py  util.py
src/database/: db_connection.py  db_util.py  initialise_db.py
src/entities/: bar.py  battle_sprite.py  battlesprite.py  character.py  entity.py  items.py  monster.py  party_member.py  partymember.py  player.py  skills.py
src/old_stuff/: battledemo.py  battlemenucreator.py  battlemenuhandler.py  menu.py
src/tests/: battle_methods_test.py  battle_test.py  demo_test.py  eventcheck_test.py  game_test.py  gamestate_test.py  keys_test.py  maingame_test.py  prepare_test.py  titlescreen_test.py  util_test.py
src/ui/: bar.py  menu.py  (+13 more)
(+45 files in other folders)
